# faradai-cyclion

./: .gitignore  README.md  render.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: contact.py  stations.py
backend/app/core/: config.py
backend/app/data/: stations.json
backend/app/schemas/: __init__.py  contact.py  station.py
backend/app/services/: email.py
frontend/: README.md  package-lock.json  package.json
frontend/public/data/: ankara-districts.geojson  istanbul-districts.geojson  kocaeli-districts.geojson
frontend/scripts/: ankara-districts.geojson  export-district-geojson.mjs  fetch-ankara-districts.py  fetch-kocaeli.py  generate-map-data.mjs  kocaeli-districts.geojson  prepare-content-data.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: Container.tsx  Footer.tsx  Header.tsx  Section.tsx  SectionHeader.tsx
frontend/src/components/map/: AnkaraDistrictMap.tsx  DistrictMapView.tsx  FilterBar.tsx  IstanbulDistrictMap.tsx  KocaeliDistrictMap.tsx  LoginModal.tsx  MapModule.tsx  MapModuleLoader.tsx  MapUiSync.tsx  ProvinceMap.tsx  StationDrawer.tsx  StationMap.tsx  (+1 more)
frontend/src/data/: district-bounds.json  hero-content.ts  map-geometry.json  milestones.json  mobiq-content.json  regions.ts  relith-content.ts  stations.json
frontend/src/hooks/: useActiveSection.ts  useFilteredStations.ts  useSectionInView.ts
frontend/src/lib/: api.ts  mapTheme.ts
frontend/src/stores/: authStore.ts  mapStore.ts  platformStore.ts
frontend/src/types/: index.ts
(+17 files in other folders)
