[project]
name = "mobiq-backend"
version = "0.1.0"
description = "MobiQ x RE-LITH API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.28.0", "pytest>=8.0.0"]
